--- a/src/components/ClusterMap/cluster-map-view.module.css
+++ b/src/components/ClusterMap/cluster-map-view.module.css
@@ -77,7 +77,7 @@
 }
 
 .buttonOverview {
-  background-color: #1c1d1f;
+  background: #1c1d1f;
   z-index: 99;
   color: #aaa;
   font-family: IBM_Plex_Mono;
@@ -85,4 +85,10 @@
   border-radius: 5px;
   cursor: POINTER;
   text-align: center;
+}
+
+.buttonOverview:hover {
+  background: #aaa;
+  color: #1c1d1f;
+  border-color: #aaa;
 }
