--- a/src/components/SelectionGrid/selection-grid.module.css
+++ b/src/components/SelectionGrid/selection-grid.module.css
@@ -2,10 +2,9 @@
   background-color: #0e0e0e;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: space-around;
 }
 .sideWrapper {
-  padding: 20px;
   flex-grow: 1;
 }
 
@@ -29,6 +28,7 @@
 .chooseButton {
   background-color: #888;
   color: #0e0e0e;
+  font-size: 130%;
   border-radius: 5px;
   border-radius: 5px solid #888;
   padding: 10px;
@@ -43,16 +43,43 @@
   display: flex;
   justify-content: space-around;
   flex-direction: row;
-  padding-top: 10px;
+  padding-top: 30px;
+}
+
+.xAxis {
+  cursor: pointer;
+  color: #888;
+  margin-top: 10px;
+  display: flex;
+  justify-content: space-around;
+  flex-direction: row;
+}
+
+.yAxis {
+  cursor: pointer;
+  color: #888;
+  transform: rotate(-90deg);
+  position: absolute;
+}
+
+.xAxis:hover,
+.yAxis:hover {
+  color: #aaa;
 }
 
 .sliderWrapper {
   color: #888;
   display: flex;
+  font-size: 130%;
   justify-content: flex-start;
   flex-direction: row;
-  padding-top: 30px;
+  margin-top: 40px;
 }
+
+.sliderText {
+  margin-top: 7px;
+}
+
 .RangeSliderStyle {
   margin-left: 50px;
   width: 50% !important;
