--- a/src/components/SelectionGrid/selection-grid.module.css
+++ b/src/components/SelectionGrid/selection-grid.module.css
@@ -28,10 +28,14 @@
 .chooseButton {
   background-color: #888;
   color: #0e0e0e;
-  font-size: 130%;
+  stroke: #0e0e0e;
+  fill: #0e0e0e;
+  text-align: center;
+  display: block;
+  font-size: 150%;
   border-radius: 5px;
   border-radius: 5px solid #888;
-  padding: 10px;
+  padding: 15px 15px 0px 15px;
   cursor: pointer;
 }
 
@@ -43,7 +47,7 @@
   display: flex;
   justify-content: space-around;
   flex-direction: row;
-  padding-top: 30px;
+  padding-top: 15px;
 }
 
 .xAxis {
